--- a/Lab_4/edostavka/templates/base.html
+++ b/Lab_4/edostavka/templates/base.html
@@ -23,8 +23,13 @@
             <ul class="sidebar-nav">
               <li><a href="{% url 'index' %}">Home</a></li>
               <li><a href="{% url 'products' %}">All books</a></li>
-              <li><a href="">All products</a></li>
-              <li><a href="">All manufacturers</a></li>
+                 {% if user.is_authenticated %}
+                     <li>User: {{ user.get_username }}</li>
+                     <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
+                 {% else %}
+                     <li><a href="{% url 'register' %}">Register</a></li>
+                     <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
+                 {% endif %}
             </ul>
           {% endblock %}
         </div>
