--- a/Lab_4/edostavka/templates/base.html
+++ b/Lab_4/edostavka/templates/base.html
@@ -22,35 +22,56 @@
           {% block sidebar %}
             <ul class="sidebar-nav">
               <li><a href="{% url 'index' %}">Home</a></li>
-              <li><a href="{% url 'products' %}">All books</a></li>
-                 {% if user.is_authenticated %}
-                     <li>User: {{ user.get_username }}</li>
-                     <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
-                 {% else %}
-                     <li><a href="{% url 'register' %}">Register</a></li>
-                     <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
-                 {% endif %}
+
+                {% for group in user.groups.all %}
+                    {% if group.name == 'Customer' %}
+                        <li><a href="{% url 'products' %}">Products</a></li>
+                        <li><a href="{% url 'cart:cart_detail' %}">Cart</a></li>
+                    {% endif %}
+                {% endfor %}
+
+                {% for group in user.groups.all %}
+                    {% if group.name == 'Staff' %}
+                        <li><a href="{% url 'order:orders' %}">All orders</a></li>
+                    {% endif %}
+                {% endfor %}
+
+                {% for group in user.groups.all %}
+                    {% if group.name == 'Admin' %}
+                        <li><a href="{% url 'administrator:list_product' %}">Administrator</a></li>
+                    {% endif %}
+                {% endfor %}
+
+                {% if user.is_authenticated %}
+                    <li>User: {{ user.get_username }}</li>
+                    <li><a href="{% url 'logout' %}?next={{ '' }}">Logout</a></li>
+                {% else %}
+                    <li><a href="{% url 'products' %}">Products</a></li>
+                    <li><a href="{% url 'register' %}">Register</a></li>
+                    <li><a href="{% url 'login' %}?next={{ '' }} ">Login</a></li>
+                {% endif %}
+
             </ul>
           {% endblock %}
         </div>
         <div class="col-sm-10 ">{% block content %}{% endblock %}
-            {% block pagination %}
-                {% if is_paginated %}
-                    <div class="pagination">
-                        <span class="page-links">
-                            {% if page_obj.has_previous %}
-                                <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
-                            {% endif %}
-                            <span class="page-current">
-                                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                            </span>
-                            {% if page_obj.has_next %}
-                                <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
-                            {% endif %}
-                        </span>
-                    </div>
-                {% endif %}
-            {% endblock %}
+{#            {% block pagination %}#}
+{#                {% if is_paginated %}#}
+{#                    <div class="pagination">#}
+{#                        <span class="page-links">#}
+{#                            {% if page_obj.has_previous %}#}
+{#                                <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>#}
+{#                            {% endif %}#}
+{#                            <span class="page-current">#}
+{#                                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.#}
+{#                            </span>#}
+{#                            {% if page_obj.has_next %}#}
+{#                                <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>#}
+{#                            {% endif %}#}
+{#                        </span>#}
+{#                    </div>#}
+{#                {% endif %}#}
+{#            {% endblock %}#}
 
         </div>
       </div>
