--- a/Lab_4/edostavka/templates/edostavka/product_list.html
+++ b/Lab_4/edostavka/templates/edostavka/product_list.html
@@ -1,7 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Book List</h1>
+  <h1>Products</h1>
+    <form method="get">
+      <label for="filter_type">Filter by:</label>
+      <select name="filter_type" id="filter_type">
+        <option value="">None</option>
+        <option value="name">Name</option>
+        <option value="price">Price</option>
+      </select>
+      <label for="sort_order">Sort order:</label>
+      <select name="sort_order" id="sort_order">
+        <option value="ascending">Ascending</option>
+        <option value="descending">Descending</option>
+      </select>
+      <button type="submit">Filter</button>
+    </form>
   {% if product_list %}
     <ul>
       {% for product in product_list %}
