--- a/Lab_4/order/templates/order/order_list.html
+++ b/Lab_4/order/templates/order/order_list.html
@@ -11,7 +11,7 @@
             {% for item in order.items.all %}
               <li>
 
-                <a href="{{ item.product.get_absolute_url }}">{{ item.get_cost }}</a>
+                <a>{{ item.get_cost }}</a>
                 <a>{{ item.quantity }}x</a>
                 <a>{{ item.product.title }}x</a>
 
