--- a/Lab_4/order/templates/order/order_list.html
+++ b/Lab_4/order/templates/order/order_list.html
@@ -10,23 +10,26 @@
           <ul>
             {% for item in order.items.all %}
               <li>
-
                 <a>{{ item.get_cost }}</a>
                 <a>{{ item.quantity }}x</a>
                 <a>{{ item.product.title }}x</a>
-
               </li>
             {% empty %}
               <li>No products.</li>
             {% endfor %}
-
           </ul>
-         <a style="font-weight: bold">Total: ${{ order.get_total_cost }} </a>
+          <a style="font-weight: bold">Total: ${{ order.get_total_cost }}</a>
         </li>
       {% empty %}
         <li>No orders found.</li>
       {% endfor %}
     </ul>
+    <a style="font-weight: bold">Total: ${{ total_cost }}</a>
+    <a style="font-weight: bold">Average: ${{ average_cost }}</a>
+    <a style="font-weight: bold">Mode: ${{ mode_cost }}</a>
+    <a style="font-weight: bold">Mediana: ${{ median_cost }}</a>
+    <a style="font-weight: bold">Mediana: ${{ most_common_item_name }}</a>
+
   {% else %}
     <p>There are no orders.</p>
   {% endif %}
