--- a/Lab_4/edostavka/templates/index.html
+++ b/Lab_4/edostavka/templates/index.html
@@ -11,5 +11,6 @@
   <ul>
     <li><strong>Products:</strong> {{ num_products }}</li>
     <li><strong>Manufacturers:</strong> {{ num_manufacturers }}</li>
+    <li><strong>Quote:</strong> {{ quote }}</li>
   </ul>
 {% endblock %}
