--- a/Lab_4/administrator/templates/administrator/list_product.html
+++ b/Lab_4/administrator/templates/administrator/list_product.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Book List</h1>
+  <h1>Product List</h1>
   {% if products %}
     <ul>
-    <form action="{% url 'administrator:create_product'%}" method="post">
-{#            {{ cart_product_form }}#}
+    <form action="{% url 'administrator:create_product'%}" method="get">
             {% csrf_token %}
             <input type="submit" value="Create">
     </form>
@@ -15,13 +14,11 @@
         <a href="{{ product.get_absolute_url }}">{{ product.title }}</a>
         ({{product.price}})
       </li>
-          <form action="{% url 'administrator:edit_product' product.id %}" method="post">
-            {{ cart_product_form }}
+          <form action="{% url 'administrator:edit_product' product.id %}" method="get">
             {% csrf_token %}
             <input type="submit" value="Edit">
           </form>
-          <form action="{% url 'administrator:delete_product' product.id %}" method="post">
-            {{ cart_product_form }}
+          <form action="{% url 'administrator:delete_product' product.id %}" method="get">
             {% csrf_token %}
             <input type="submit" value="Delete">
           </form>
