Created Client_detail and view.

--- a/Lab_4/edostavka/templates/base.html
+++ b/Lab_4/edostavka/templates/base.html
@@ -45,6 +45,7 @@
 
                 {% for group in user.groups.all %}
                     {% if group.name == 'Staff' %}
+                        <li><a href="{% url 'client_list:client_list' %}">Clients</a></li>
                         <li><a href="{% url 'order:orders' %}">All orders</a></li>
                     {% endif %}
                 {% endfor %}
